<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="16dp"
            android:src="@drawable/ic_done"
            android:tint="@android:color/white" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/content"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginTop="24dp"
            android:text="@string/script_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:editable="false"
            app:layout_constraintBaseline_toBaselineOf="@id/name_label"
            app:layout_constraintStart_toEndOf="@id/name_label"
            tools:text="name" />

        <TextView
            android:id="@+id/condition_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/condition"
            app:layout_constraintStart_toStartOf="@+id/name_label"
            app:layout_constraintTop_toBottomOf="@+id/name_label" />

        <TextView
            android:id="@+id/condition"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBaseline_toBaselineOf="@id/condition_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/condition_label"
            tools:text="This is a condition This is a condition This is a condition
                        This is a condition This is a condition This is a condition" />

        <ImageView
            android:id="@+id/change_condition_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintStart_toEndOf="@id/condition"
            app:layout_constraintTop_toTopOf="@id/condition" />


        <TextView
            android:id="@+id/action_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action"
            app:layout_constraintStart_toStartOf="@+id/condition_label"
            app:layout_constraintTop_toBottomOf="@+id/condition" />

        <TextView
            android:id="@+id/action"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="40dp"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBaseline_toBaselineOf="@id/action_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/action_label"
            tools:text="This is an action This is an action This is an action This is an action " />

        <ImageView
            android:id="@+id/change_action_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="8dp"
            android:src="@android:drawable/ic_menu_edit"
            app:layout_constraintStart_toEndOf="@id/action"
            app:layout_constraintTop_toTopOf="@id/action" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
